// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should dispatch action to add repositories 1`] = `
Array [
  Object {
    "payload": Object {
      "newEndCursor": "Y3Vyc29yOnYyOpHOARWdng==",
      "newHasNextPage": true,
      "newList": Array [
        Object {
          "description": "Pang pang revenge",
          "forkCount": 0,
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
        },
        Object {
          "description": "Pangolier is balanced ",
          "forkCount": 0,
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
        },
        Object {
          "description": "Yeah, i love dota2 ",
          "forkCount": 0,
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
        },
      ],
    },
    "type": "UPDATE_REPOSITORIES",
  },
]
`;

exports[`should dispatch action to add repositories 2`] = `
Array [
  Object {
    "payload": Object {
      "newEndCursor": "Y3Vyc29yOnYyOpHOARWdng==",
      "newHasNextPage": false,
      "newList": Array [
        Object {
          "description": "We should play",
          "forkCount": 0,
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
        },
        Object {
          "description": "Hahaha",
          "forkCount": 0,
          "homepageUrl": null,
          "name": "PangRevenge",
          "primaryLanguage": Object {
            "color": "#f1e05a",
            "name": "JavaScript",
          },
        },
      ],
    },
    "type": "ADD_REPOSITORIES",
  },
]
`;
